# singularity-polkit-agent

./: CONTRIBUTING.md  README.md  meson.build
src/: agent.vala  auth_dialog.vala  helper_main.vala  main.vala
